# rtype-map-editor

./: .gitignore  CMakeLists.txt  README.md
assets/configs/: client-rtype.json  client.json  level1.json  rtype.json  server-rtype.json  server.json
maps/: level_1-client.json  level_1-server.json  map.json
src/: asset_info.hpp  config_loader.cpp  config_loader.hpp  entity_data.hpp  main.cpp  map_editor.cpp  map_editor.hpp  map_serializer.cpp  map_serializer.hpp
